remove EnableJVMCI flag