@@ -34,7 +34,7 @@
  *          /compiler/jvmci/jdk.vm.ci.code.test/src
  * @library /test/lib
  * @run testng/othervm
- *      -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:-UseJVMCICompiler
+ *      -XX:+UnlockExperimentalVMOptions -XX:-UseJVMCICompiler
  *      jdk.vm.ci.hotspot.test.TestHotSpotJVMCIRuntime
  */
 
@@ -169,10 +169,10 @@ public class TestHotSpotJVMCIRuntime {
         for (String name : names) {
             ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
                 "-XX:+UnlockExperimentalVMOptions",
-                "-XX:+EnableJVMCI",
                 "-XX:-UseJVMCICompiler",
                 "-XX:+UseJVMCINativeLibrary",
                 "-Dtest.jvmci.forceEnomemOnLibjvmciInit=true",
+                "--add-modules=jdk.internal.vm.ci",
                 "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED",
                 "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED",
                 "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED",
